--- a/index.html
+++ b/index.html
@@ -7,5 +7,94 @@
   <link rel="stylesheet" href="styles.css"> <!-- Link to external CSS -->
 </head>
 <body>
+    <!-- Header Section -->
+  <nav class="navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">Tasty Zone</a>
+      <ul class="navbar-nav">
+        <li><a class="nav-link" href="#menu">Menu</a></li>
+        <li><a class="nav-link" href="#about">About Us</a></li>
+        <li><a class="nav-link" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div>
+      <h1>Welcome to Tasty Zone</h1>
+      <p>Your destination for authentic Arabian flavors</p>
+      <a href="#menu" class="btn">Explore Our Menu</a>
+    </div>
+  </section>
+
+  <!-- Menu Section -->
+  <section id="menu" class="section">
+    <h2>Our Delicious Menu</h2>
+    <div class="menu-container">
+      <!-- Menu Item 1: Shawarma -->
+      <div class="menu-item">
+        <img src="shawarma.jpg" alt="Crispy Shawarma">
+        <h3>Crispy Shawarma</h3>
+        <p>Tender, juicy shawarma wrapped in crispy bread, drizzled with garlic sauce.</p>
+        <p class="price">120 DH</p>
+      </div>
+      <!-- Menu Item 2: Syrian Grape Leaves -->
+      <div class="menu-item">
+        <img src="w.jpg" alt="Syrian Grape Leaves">
+        <h3>Syrian Grape Leaves</h3>
+        <p>Savory stuffed grape leaves, seasoned with spices, perfect as a starter.</p>
+        <p class="price">170 DH</p>
+      </div>
+      <!-- Menu Item 3: Kabsa -->
+      <div class="menu-item">
+        <img src="kabsa.jpg" alt="Kabsa">
+        <h3>Kabsa</h3>
+        <p>A fragrant rice dish with spiced chicken, perfect for a hearty meal.</p>
+        <p class="price">200 DH</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- About Us Section -->
+  <section id="about" class="section">
+    <div class="about-container">
+      <img src="aboutus.jpg" alt="Tasty Zone Restaurant">
+      <div>
+        <h2>About Us</h2>
+        <p>Tasty Zone brings you the authentic taste of Arabian cuisine. From our crispy shawarma to the delicious Syrian grape leaves, every dish is crafted with passion and care. Come join us for a feast of flavors that will transport you to the heart of Arabia!</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <label for="name">Your Name</label>
+      <input type="text" id="name" placeholder="Enter your name" required>
+
+      <label for="email">Email</label>
+      <input type="email" id="email" placeholder="Enter your email" required>
+
+      <label for="message">Your Message</label>
+      <textarea id="message" rows="4" placeholder="Write your message" required></textarea>
+
+      <button type="submit" class="btn">Submit</button>
+    </form>
+  </section>
+
+  <!-- Footer Section -->
+  <footer class="footer">
+    <p>&copy; 2024 Tasty Zone | All Rights Reserved</p>
+    <div>
+      <a href="#">Facebook</a>
+      <a href="#">Instagram</a>
+      <a href="#">Twitter</a>
+    </div>
+  </footer>
+
+</body>
+</html>
 
   
