--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div>
-      <h1>Welcome to Tasty Zone</h1>
+      <h1 class="h1p">Welcome to Tasty Zone</h1>
       <p>Your destination for authentic Arabian flavors</p>
       <a href="#menu" class="btn">Explore Our Menu</a>
     </div>
