more professional footer

--- a/index.html
+++ b/index.html
@@ -84,16 +84,79 @@
     </form>
   </section>
 
-  <!-- Footer Section -->
-  <footer class="footer">
-    <p>&copy; 2024 Tasty Zone | All Rights Reserved</p>
-    <div>
-      <a href="#">Facebook</a>
-      <a href="#">Instagram</a>
-      <a href="#">Twitter</a>
+  <!-- Footer HTML -->
+<footer class="footer">
+  <div class="footer-content">
+    <div class="footer-section">
+      <h6>Menu</h6>
+      <ul>
+        <li><a href="#menu">Shawarma</a></li>
+        <li><a href="#menu">Syrian Grape Leaves</a></li>
+        <li><a href="#menu">Kabsa</a></li>
+        <li><a href="#menu">Appetizers</a></li>
+        <li><a href="#menu">Desserts</a></li>
+      </ul>
     </div>
-  </footer>
 
+    <div class="footer-section">
+      <h6>About</h6>
+      <ul>
+        <li><a href="#about">Our Story</a></li>
+        <li><a href="#about">Our Chefs</a></li>
+        <li><a href="#about">Gallery</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="#about">Careers</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h6>Support</h6>
+      <ul>
+        <li><a href="#contact">Customer Service</a></li>
+        <li><a href="#">FAQs</a></li>
+        <li><a href="#">Order Guide</a></li>
+        <li><a href="#">Catering Services</a></li>
+        <li><a href="#">Feedback</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-section">
+      <h6>Follow Us</h6>
+      <div class="social-links">
+        <a href="#" class="social-link">
+          <img src="icons8-facebook-96.png" alt="Facebook">
+          <span>Facebook</span>
+        </a>
+        <a href="#" class="social-link">
+          <img src="icons8-instagram-48.png" alt="Instagram">
+          <span>Instagram</span>
+        </a>
+        <a href="#" class="social-link">
+          <img src="icons8-twitter-48.png" alt="Twitter">
+          <span>Twitter</span>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2024 Tasty Zone | All Rights Reserved.</p>
+    <div class="footer-bottom-links">
+      <a href="#">Terms of Service</a>
+      <a href="#">Privacy Policy</a>
+      <a href="#">Site Map</a>
+      <select class="language-select">
+        <option selected>Select Language</option>
+        <option value="en">English</option>
+        <option value="ar">Arabic</option>
+      </select>
+    </div>
+  </div>
+</footer>
+  
+     
+      
+  
 </body>
 </html>
 
